--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+Flask==2.0.3
+Flask-Cors>=3.0.0
+gunicorn==21.2.0
+werkzeug==2.0.2
+cloudinary==1.29.0
 transformers==4.27.4
 datasets==2.5.2
 librosa==0.9.2
 soundfile==0.10.3.post1
 torch==1.13.1
 torchaudio==0.13.1
-numpy==1.22.4
+numpy==1.26.4
